# tessbind

./: .envrc  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  build.sh  build_dependencies.sh  cleanup.sh  default.nix  example.cpp  flake.nix  meson.build  noxfile.py  pyproject.toml  run.py  setup.cfg  setup.py  tesseract5.nix
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml
docs/: conf.py  index.md
scripts/: cleanup.sh  create-release.sh  install-debian-deps.sh
src/: main.cpp
src/tessbind/: __init__.py  _core.pyi  manager.py  utils.py
tests/: test_compiled.py  test_package.py  test_tessbind.py
