[project]
name = "tessbind"
dynamic = ["version"]
description = "Tesseract pybind11 bindings"
readme = "README.md"
authors = [{ name = "Enno Richter", email = "enno@nerdworks.de" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/tessbind/__init__.py"

[tool.setuptools.dynamic]
version = { attr = "tessbind.__version__" }

[tool.uv]
cache-keys = [
  { file = "CMakeLists.txt" },
  { file = "pyproject.toml" },
  { git = true },
]

[project.optional-dependencies]
test = ["pytest"]
