[metadata]
name = tessbind
description = Tesseract pybind11 bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elohmeier/tessbind
author = Enno Richter
author_email = info@nerdworks.de
license = Apache-2.0
license_files = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
    Documentation = https://tessbind.readthedocs.io/
    Bug Tracker = https://github.com/elohmeier/tessbind/issues
    Discussions = https://github.com/elohmeier/tessbind/discussions
    Changelog = https://github.com/elohmeier/tessbind/releases

[options]
packages = find:
install_requires =
    typing-extensions>=4.6;python_version<'3.11'
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
    pytest-cov>=3
docs =
    furo>=2023.08.17
    myst-parser>=0.13
    sphinx>=7.0
    sphinx-autodoc-typehints
    sphinx-copybutton
test =
    pytest>=6
    pytest-cov>=3
